Only show up PayJoin endpoint when it's filled.

--- a/WalletWasabi.Gui/Controls/WalletExplorer/SendControlView.xaml
+++ b/WalletWasabi.Gui/Controls/WalletExplorer/SendControlView.xaml
@@ -42,13 +42,9 @@
             </i:Interaction.Behaviors>
           </controls:ExtendedTextBox>
 
-          <controls:ExtendedTextBox Classes="monospaceFont" Text="{Binding Bip79Url}" Watermark="Payjoin endpoint" UseFloatingWatermark="True">
-            <i:Interaction.Behaviors>
-              <behaviors:PasteAddressOnClickBehavior Command="{Binding OnAddressPasteCommand}" />
-            </i:Interaction.Behaviors>
-          </controls:ExtendedTextBox>
-          <suggestions:SuggestLabelView DataContext="{Binding LabelSuggestion}" />
+          <controls:ExtendedTextBox IsVisible="{Binding Bip79UrlIsVisible}" Classes="monospaceFont" Text="{Binding Bip79Url}" Watermark="PayJoin EndPoint" UseFloatingWatermark="True" />
 
+          <suggestions:SuggestLabelView DataContext="{Binding LabelSuggestion}" />
           <StackPanel Orientation="Horizontal" Spacing="10">
             <Button Content="{Binding IsMax, Converter={StaticResource BooleanStringConverter}, ConverterParameter=Clear:Max}" Command="{Binding MaxCommand}" VerticalAlignment="Top" Height="40" />
             <controls:ExtendedTextBox
